fix alignment of search icon on mobile view

--- a/wordpress/wp-content/themes/kaidez-swiss/style.css
+++ b/wordpress/wp-content/themes/kaidez-swiss/style.css
@@ -229,5 +229,4 @@ a.nav-links:visited{color:#000}
 .footer-text-spaced{margin-top:25px}
 .jump-to-top{margin:40px auto 0;padding:10px;width:200px;color:#fff;cursor:pointer;background-color:#000}
 a.jump-to-top-link{color:#fff;font-weight:700}
-.fa{display:inline}
 }
